AC_PREREQ([2.69])
AC_INIT([minisatip], [0.0], [erik@openpli.org])
AM_INIT_AUTOMAKE([-Wall -Werror foreign])

AC_PROG_CC
AC_CONFIG_HEADERS([config.h])
AC_CONFIG_FILES([Makefile])
AC_CHECK_HEADERS([sys/ioctl.h linux/dvb/frontend.h linux/dvb/dmx.h linux/dvb/version.h])

AC_HEADER_STDBOOL
AC_C_INLINE
AC_TYPE_SSIZE_T
AC_TYPE_UINT32_T

AC_FUNC_MALLOC

AC_OUTPUT
